炫彩编程助手/Data/DemoMgr/VS/Lib/xcgui.h


//对象类型决定功能
//对象样式决定外观

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR = -1,   ///<错误类型
	XC_NOTHING = 0,
	XC_WINDOW = 1,    ///<窗口
	XC_MODALWINDOW = 2,    ///<模态窗口
	XC_FRAMEWND = 3,    ///<框架窗口
	XC_FLOATWND = 4,    ///<浮动窗口
	XC_COMBOBOXWINDOW = 11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW = 12,  //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW = 13,   //popupMenuChildWindow_  弹出菜单子窗口
	XC_OBJECT_UI = 19,   ///<...
	XC_WIDGET_UI = 20,
	//元素
	XC_ELE = 21,   ///<基础元素
	XC_ELE_LAYOUT = 53,   ///<布局元素
	XC_BUTTON = 22,   ///<按钮
	XC_RICHEDIT = 23,   ///<富文本编辑框
	XC_COMBOBOX = 24,   ///<下拉组合框元素
	XC_SCROLLBAR = 25,   ///<滚动条元素
	XC_SCROLLVIEW = 26,   ///<滚动视图元素
	XC_LIST = 27,   ///<列表元素
	XC_LISTBOX = 28,   ///<列表框元素
	XC_LISTVIEW = 29,   ///<列表视图,大图标
	XC_TREE = 30,   ///<树元素
	XC_MENUBAR = 31,   ///<菜单条
	XC_SLIDERBAR = 32,   ///<滑动条
	XC_PROGRESSBAR = 33,   ///<进度条
	XC_TOOLBAR = 34,   ///<工具条
	XC_MONTHCAL = 35,   ///<月历元素
	XC_DATETIME = 36,   ///<时间元素
	XC_PROPERTYGRID = 37,   ///<属性网格
	XC_RICHEDIT_COLOR = 38,   ///<颜色选择元素
	XC_RICHEDIT_SET = 39,   ///<...
	XC_TABBAR = 40,   ///<tab条
	XC_TEXTLINK = 41,   ///<文本链接按钮

	XC_PANE = 42,   ///<布局窗格
	XC_PANE_SPLIT = 43,   ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON = 44,   ///<菜单条上的按钮
							  //	XC_TOOLBAR_BUTTON       =45,   ///<工具条上按钮
							  //	XC_PROPERTYPAGE_LABEL   =46,   ///<属性页标签按钮
							  //	XC_PIER                 =47,   ///<窗格停靠码头
							  //	XC_BUTTON_MENU          =48,   ///<弹出菜单按钮
							  //	XC_VIRTUAL_ELE          =49,   ///<虚拟元素
							  XC_RICHEDIT_FILE = 50,   ///<RichEditFile 文件选择编辑框
							  XC_RICHEDIT_FOLDER = 51,   ///<RichEditFolder  文件夹选择编辑框
							  XC_LIST_HEADER = 52,   ///<列表头元素

							  XC_SHAPE = 61,    ///<形状对象
							  XC_SHAPE_TEXT = 62,    ///<形状对象-文本
							  XC_SHAPE_PICTURE = 63,    ///<形状对象-图片
							  XC_SHAPE_RECT = 64,    ///<形状对象-矩形
							  XC_SHAPE_ELLIPSE = 65,    ///<形状对象-圆
							  XC_SHAPE_LINE = 66,    ///<形状对象-直线
							  XC_SHAPE_GROUPBOX = 67,    ///<形状对象-组框
							  XC_SHAPE_GIF = 68,    ///<形状对象-GIF

													//其他类型
													XC_MENU = 81,   ///<弹出菜单
													XC_IMAGE = 82,         ///<图片
													XC_IMAGE_TEXTURE = XC_IMAGE,   ///<图片纹理,图片源,图片素材
													XC_HDRAW = 83,   ///<绘图操作
													XC_FONT = 84,   ///<炫彩字体
													XC_FLASH = 85,   ///<flash   
													XC_PANE_CELL = 86,   ///<...
													XC_WEB = 87,   ///<...
													XC_IMAGE_FRAME = 88,   ///<图片帧,指定图片的渲染属性

													XC_LAYOUT_OBJECT = 101,   ///<布局对象LayoutObject
													XC_ADAPTER = 102,   ///<...
													XC_ADAPTER_TABLE = 103,   ///<数据适配器AdapterTable
													XC_ADAPTER_TREE = 104,   ///<数据适配器AdapterTree
													XC_ADAPTER_LISTVIEW = 105,   ///<数据适配器AdapterListView
													XC_ADAPTER_MAP = 106,   ///<数据适配器AdapterMap

													XC_BKINFOM = 116, //背景管理器

																	  //无实体对象,只是用来判断布局
																	  XC_LAYOUT_LISTVIEW = 111,
																	  XC_LAYOUT_LIST = 112,
																	  XC_LAYOUT_OBJECT_GROUP = 113,
																	  XC_LAYOUT_OBJECT_ITEM = 114,
																	  XC_LAYOUT_PANEL = 115,

																	  //无实体对象,只是用来判断类型
																	  XC_LIST_ITEM = 121,     //列表项模板 list_item
																	  XC_LISTVIEW_GROUP = 122,
																	  XC_LISTVIEW_ITEM = 123,
																	  //XC_BUTTON_EX,
};

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;       ///<资源句柄


///@}

/// @defgroup groupListItemState List项状态
/// @ingroup macroDefine
/// @{
enum  list_item_state_
{
	list_item_state_leave = 0,   ///<项鼠标离开状态
	list_item_state_stay = 1,    ///<项鼠标停留状态
	list_item_state_select = 2,  ///<项选择状态
};


///@}

///@defgroup Group_listItemTemp_type_    列表项模板类型
///@ingroup  macroDefine
///@{
enum listItemTemp_type_
{
	listItemTemp_type_tree = 0x01,					  ///<tree
	listItemTemp_type_listBox = 0x02,				  ///<listBox
	listItemTemp_type_list_head = 0x04,				  ///<list 列表头
	listItemTemp_type_list_item = 0x08,				  ///<list 列表项
	listItemTemp_type_listView_group = 0x10,		  ///<listView 列表视组
	listItemTemp_type_listView_item = 0x20,			  ///<listView 列表视项
	listItemTemp_type_list = listItemTemp_type_list_head | listItemTemp_type_list_item,  ///<list (列表头)与(列表项)组合
	listItemTemp_type_listView = listItemTemp_type_listView_group | listItemTemp_type_listView_item, ///<listView (列表视组)与(列表视项)组合
};


struct  listView_item_id_i
{
	int  iGroup;   ///<组索引
	int  iItem;    ///<项索引
};

XC_API int WINAPI  XListBox_GetRowSpace(HELE hEle);

XC_API int  WINAPI XListBox_HitTest(HELE hEle, POINT *pPt);

XC_API int  WINAPI XListBox_HitTestOffset(HELE hEle, POINT *pPt); //自动添加滚动视图偏移量
XC_API BOOL WINAPI XListBox_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);

XC_API BOOL WINAPI XListBox_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);

XC_API HXCGUI WINAPI XListBox_GetTemplateObject(HELE hEle, int iItem, int nTempItemID);

XC_API void WINAPI XListBox_EnableMultiSel(HELE hEle, BOOL bEnable);

XC_API HXCGUI WINAPI XListBox_CreateAdapter(HELE hEle);

XC_API void   WINAPI XListBox_BindAdapter(HELE hEle, HXCGUI hAdapter);

XC_API HXCGUI WINAPI XListBox_GetAdapter(HELE hEle);

XC_API void WINAPI XListBox_Sort(HELE hEle, int iColumnAdapter, BOOL bAscending);  //设置排序
XC_API void WINAPI XListBox_RefreshData(HELE hEle);

XC_API void WINAPI XListBox_RefreshItem(HELE hEle, int iItem);

XC_API HTEMP WINAPI XTemp_Load(listItemTemp_type_ nType, const wchar_t* pFileName);  //加载模板 返回模板对象

XC_API HTEMP WINAPI XTemp_LoadFromString(listItemTemp_type_ nType, const char* pStringXML);  //加载模板,从内存, 返回模板对象

XC_API BOOL  WINAPI XTemp_Destroy(HTEMP hTemp);

XC_API HTEMP WINAPI XTemp_Create(listItemTemp_type_ nType);

XC_API BOOL  WINAPI XTemp_AddNodeRoot(HTEMP hTemp, void* pNode);

XC_API BOOL  WINAPI XTemp_AddNode(void* pParentNode, void* pNode);

XC_API void* WINAPI XTemp_CreateNode(XC_OBJECT_TYPE nType);

XC_API BOOL  WINAPI XTemp_SetNodeAttribute(void* pNode, const wchar_t* pName, const wchar_t* pAttr);

XC_API HELE WINAPI XList_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API int WINAPI XList_AddColumn(HELE hEle, int width); //增加列
XC_API int WINAPI XList_InsertColumn(HELE hEle, int width, int iItem);

XC_API void WINAPI XList_EnableMultiSel(HELE hEle, BOOL bEnable);

XC_API void WINAPI XList_EnableDragChangeColumnWidth(HELE hEle, BOOL bEnable);

XC_API void WINAPI XList_EnableVScrollBarTop(HELE hEle, BOOL bTop);

XC_API void WINAPI XList_EnableItemBkFullRow(HELE hEle, BOOL bFull);

XC_API void WINAPI XList_SetSort(HELE hEle, int iColumn, int iColumnAdapter, BOOL bEnable);//设置排序
XC_API void WINAPI XList_SetDrawItemBkFlags(HELE hEle, int style);

XC_API void WINAPI XList_SetColumnWidth(HELE hEle, int iItem, int width);

XC_API void WINAPI XList_SetColumnMinWidth(HELE hEle, int iItem, int width);

XC_API void WINAPI XList_SetColumnWidthFixed(HELE hEle, int iColumn, BOOL bFixed);

XC_API int  WINAPI XList_GetColumnWidth(HELE hEle, int iColumn);  //获取列宽
XC_API int  WINAPI XList_GetColumnCount(HELE hEle);  //获取列数量
XC_API BOOL WINAPI XList_DeleteColumn(HELE hEle, int iItem);

XC_API void WINAPI XList_DeleteColumnAll(HELE hEle);

XC_API BOOL WINAPI XList_SetItemData(HELE hEle, int iItem, int iSubItem, int data);

XC_API int  WINAPI XList_GetItemData(HELE hEle, int iItem, int iSubItem);

XC_API BOOL WINAPI XList_SetSelectItem(HELE hEle, int iItem);

XC_API int  WINAPI XList_GetSelectItem(HELE hEle);

XC_API int  WINAPI XList_GetSelectItemCount(HELE hEle);

XC_API void WINAPI XList_SetSelectAll(HELE hEle);

XC_API int  WINAPI XList_GetSelectAll(HELE hEle, out_ int *pArray, int nArraySize);

XC_API BOOL WINAPI XList_CancelSelectItem(HELE hEle, int iItem);

XC_API void WINAPI XList_CancelSelectAll(HELE hEle);

XC_API HELE WINAPI XList_GetHeaderHELE(HELE hEle);

XC_API void WINAPI XList_BindAdapter(HELE hEle, HXCGUI hAdapter);

XC_API void WINAPI XList_BindAdapterHeader(HELE hEle, HXCGUI hAdapter);

XC_API HXCGUI WINAPI XList_CreateAdapter(HELE hEle);

XC_API HXCGUI WINAPI XList_CreateAdapterHeader(HELE hEle);

XC_API HXCGUI WINAPI XList_GetAdapter(HELE hEle);

XC_API HXCGUI WINAPI XList_GetAdapterHeader(HELE hEle);

XC_API BOOL WINAPI XList_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);

XC_API BOOL WINAPI XList_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);

XC_API HXCGUI WINAPI XList_GetTemplateObject(HELE hEle, int iItem, int iSubItem, int nTempItemID); //通过模板项ID,获取实例化模板项ID对应的对象.
XC_API int    WINAPI XList_GetItemIndexFromHXCGUI(HELE hEle, HXCGUI hXCGUI);

XC_API HXCGUI WINAPI XList_GetHeaderTemplateObject(HELE hEle, int iItem, int nTempItemID);

XC_API int    WINAPI XList_GetHeaderItemIndexFromHXCGUI(HELE hEle, HXCGUI hXCGUI);

XC_API void WINAPI XList_SetHeaderHeight(HELE hEle, int height);

XC_API int  WINAPI XList_GetHeaderHeight(HELE hEle);

XC_API void WINAPI XList_AddItemBkBorder(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XList_AddItemBkFill(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XList_AddItemBkImage(HELE hEle, list_item_state_ nState, HIMAGE hImage);

XC_API int  WINAPI XList_GetItemBkInfoCount(HELE hEle);

XC_API void WINAPI XList_ClearItemBkInfo(HELE hEle);

XC_API void WINAPI XList_SetItemHeightDefault(HELE hEle, int nHeight, int nSelHeight);

XC_API void WINAPI XList_GetItemHeightDefault(HELE hEle, out_ int *pHeight, out_ int *pSelHeight);

XC_API void WINAPI XList_SetRowSpace(HELE hEle, int nSpace);

XC_API int  WINAPI XList_GetRowSpace(HELE hEle);

XC_API BOOL WINAPI XList_HitTest(HELE hEle, POINT *pPt, out_ int *piItem, out_ int *piSubItem);

XC_API BOOL WINAPI XList_HitTestOffset(HELE hEle, POINT *pPt, out_ int *piItem, out_ int *piSubItem);

XC_API void WINAPI XList_RefreshData(HELE hEle);

XC_API void WINAPI XList_RefreshItem(HELE hEle, int iItem);

XC_API HELE WINAPI XListView_Create(int x, int y, int cx, int cy, HXCGUI hParent = NULL);

XC_API HXCGUI WINAPI XListView_CreateAdapter(HELE hEle);

XC_API void   WINAPI XListView_BindAdapter(HELE hEle, HXCGUI hAdapter);

XC_API HXCGUI WINAPI XListView_GetAdapter(HELE hEle);

XC_API BOOL WINAPI XListView_SetItemTemplateXML(HELE hEle, const wchar_t* pXmlFile);

XC_API BOOL WINAPI XListView_SetItemTemplateXMLFromString(HELE hEle, const char* pStringXML);

XC_API HXCGUI WINAPI XListView_GetTemplateObject(HELE hEle, int iGroup, int iItem, int nTempItemID);

XC_API HXCGUI WINAPI XListView_GetTemplateObjectGroup(HELE hEle, int iGroup, int nTempItemID);

XC_API BOOL WINAPI XListView_GetItemIDFromHXCGUI(HELE hEle, HXCGUI hXCGUI, out_ int* piGroup, out_ int* piItem);

XC_API BOOL WINAPI XListView_HitTest(HELE hEle, in_ POINT* pPt, out_ int* pOutGroup, out_ int* pOutItem);

XC_API int  WINAPI XListView_HitTestOffset(HELE hEle, in_ POINT *pPt, out_ int* pOutGroup, out_ int* pOutItem); //自动添加滚动视图偏移量
XC_API void WINAPI XListView_EnableMultiSel(HELE hEle, BOOL bEnable);

XC_API void WINAPI XListView_SetDrawItemBkFlags(HELE hEle, int nFlags);

XC_API BOOL WINAPI XListView_SetSelectItem(HELE hEle, int iGroup, int iItem);

XC_API BOOL WINAPI XListView_GetSelectItem(HELE hEle, int *piGroup, int *piItem);

XC_API int  WINAPI XListView_GetSelectItemCount(HELE hEle);

XC_API int  WINAPI XListView_GetSelectItemAll(HELE hEle, out_ listView_item_id_i *pArray, int nArraySize);

XC_API void WINAPI XListView_SetSelectItemAll(HELE hEle);

XC_API void WINAPI XListView_CancelSelectItemAll(HELE hEle);

XC_API void WINAPI XListView_SetColumnSpace(HELE hEle, int space); //设置列间隔
XC_API void WINAPI XListView_SetRowSpace(HELE hEle, int space); //设置行间隔
XC_API void WINAPI XListView_SetAlignSizeLeft(HELE hEle, int size);

XC_API void WINAPI XListView_SetAlignSizeTop(HELE hEle, int size);

XC_API void WINAPI XListView_SetItemSize(HELE hEle, int width, int height);

XC_API void WINAPI XListView_GetItemSize(HELE hEle, SIZE* pSize);

XC_API void WINAPI XListView_SetGroupHeight(HELE hEle, int height);

XC_API int  WINAPI XListView_GetGroupHeight(HELE hEle);

XC_API void WINAPI XListView_SetGroupUserData(HELE hEle, int iGroup, int nData);

XC_API void WINAPI XListView_SetItemUserData(HELE hEle, int iGroup, int iItem, int nData);

XC_API int WINAPI XListView_GetGroupUserData(HELE hEle, int iGroup);

XC_API int WINAPI XListView_GetItemUserData(HELE hEle, int iGroup, int iItem);

XC_API void WINAPI XListView_AddItemBkBorder(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha, int width);

XC_API void WINAPI XListView_AddItemBkFill(HELE hEle, list_item_state_ nState, COLORREF color, BYTE alpha);

XC_API void WINAPI XListView_AddItemBkImage(HELE hEle, list_item_state_ nState, HIMAGE hImage);

XC_API int  WINAPI XListView_GetItemBkInfoCount(HELE hEle);

XC_API void WINAPI XListView_ClearItemBkInfo(HELE hEle);

XC_API void WINAPI XListView_RefreshData(HELE hEle);