炫彩编程助手/Data/DemoMgr/Delphi/Lib/XCGUI.pas

function XListBox_GetRowSpace (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_HitTest (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_HitTestOffset (hEle:Integer;pPt:TPOINT) : Integer;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListBox_GetTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
function XListBox_CreateAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XListBox_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListBox_Sort (hEle:Integer;iColumnAdapter:Integer;bAscending:LongBool);stdcall;far; external 'xcgui.dll';
procedure XListBox_RefreshData (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XListBox_RefreshItem (hEle:Integer;iItem:Integer);stdcall;far; external 'xcgui.dll';
function XTemp_Load (nType:Integer;pFileName:PWideChar) : Integer;stdcall;far; external 'xcgui.dll';
function XTemp_LoadFromString (nType:Integer;pStringXML:PChar) : Integer;stdcall;far; external 'xcgui.dll';
function XTemp_Destroy (hTemp:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XTemp_Create (nType:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XTemp_AddNodeRoot (hTemp:Integer;pNode:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XTemp_AddNode (pParentNode:Integer;pNode:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XTemp_CreateNode (nType:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XTemp_SetNodeAttribute (pNode:Integer;pName:PWideChar;pAttr:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_AddColumn (hEle:Integer;width:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_InsertColumn (hEle:Integer;width:Integer;iItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_EnableDragChangeColumnWidth (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_EnableVScrollBarTop (hEle:Integer;bTop:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_EnableItemBkFullRow (hEle:Integer;bFull:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_SetSort (hEle:Integer;iColumn:Integer;iColumnAdapter:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XList_SetDrawItemBkFlags (hEle:Integer;style:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnWidth (hEle:Integer;iItem:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnMinWidth (hEle:Integer;iItem:Integer;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetColumnWidthFixed (hEle:Integer;iColumn:Integer;bFixed:LongBool);stdcall;far; external 'xcgui.dll';
function XList_GetColumnWidth (hEle:Integer;iColumn:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetColumnCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_DeleteColumn (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_DeleteColumnAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_SetItemData (hEle:Integer;iItem:Integer;iSubItem:Integer;data:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetItemData (hEle:Integer;iItem:Integer;iSubItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_SetSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetSelectItem (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetSelectItemCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_SetSelectAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetSelectAll (hEle:Integer;pArray:Integer;nArraySize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_CancelSelectItem (hEle:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_CancelSelectAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetHeaderHELE (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_BindAdapterHeader (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XList_CreateAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_CreateAdapterHeader (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetAdapterHeader (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_GetTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetHeaderTemplateObject (hEle:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_GetHeaderItemIndexFromHXCGUI (hEle:Integer;hXCGUI:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_SetHeaderHeight (hEle:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetHeaderHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XList_AddItemBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetItemBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XList_ClearItemBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetItemHeightDefault (hEle:Integer;nHeight:Integer;nSelHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_GetItemHeightDefault (hEle:Integer;pHeight:Integer;pSelHeight:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_SetRowSpace (hEle:Integer;nSpace:Integer);stdcall;far; external 'xcgui.dll';
function XList_GetRowSpace (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XList_HitTest (hEle:Integer;pPt:TPOINT;piItem:Integer;piSubItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XList_HitTestOffset (hEle:Integer;pPt:TPOINT;piItem:Integer;piSubItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
procedure XList_RefreshData (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XList_RefreshItem (hEle:Integer;iItem:Integer);stdcall;far; external 'xcgui.dll';
function XListView_Create (x:Integer;y:Integer;cx:Integer;cy:Integer;hParent:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_CreateAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_BindAdapter (hEle:Integer;hAdapter:Integer);stdcall;far; external 'xcgui.dll';
function XListView_GetAdapter (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_SetItemTemplateXML (hEle:Integer;pXmlFile:PWideChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_SetItemTemplateXMLFromString (hEle:Integer;pStringXML:PChar) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetTemplateObject (hEle:Integer;iGroup:Integer;iItem:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetTemplateObjectGroup (hEle:Integer;iGroup:Integer;nTempItemID:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetItemIDFromHXCGUI (hEle:Integer;hXCGUI:Integer;piGroup:Integer;piItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_HitTest (hEle:Integer;pPt:TPOINT;pOutGroup:Integer;pOutItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_HitTestOffset (hEle:Integer;pPt:TPOINT;pOutGroup:Integer;pOutItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_EnableMultiSel (hEle:Integer;bEnable:LongBool);stdcall;far; external 'xcgui.dll';
procedure XListView_SetDrawItemBkFlags (hEle:Integer;nFlags:Integer);stdcall;far; external 'xcgui.dll';
function XListView_SetSelectItem (hEle:Integer;iGroup:Integer;iItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetSelectItem (hEle:Integer;piGroup:Integer;piItem:Integer) : LongBool;stdcall;far; external 'xcgui.dll';
function XListView_GetSelectItemCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetSelectItemAll (hEle:Integer;pArray:listView_item_id_i;nArraySize:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_SetSelectItemAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_CancelSelectItemAll (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetColumnSpace (hEle:Integer;space:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetRowSpace (hEle:Integer;space:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetAlignSizeLeft (hEle:Integer;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetAlignSizeTop (hEle:Integer;size:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetItemSize (hEle:Integer;width:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_GetItemSize (hEle:Integer;pSize:TSIZE);stdcall;far; external 'xcgui.dll';
procedure XListView_SetGroupHeight (hEle:Integer;height:Integer);stdcall;far; external 'xcgui.dll';
function XListView_GetGroupHeight (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_SetGroupUserData (hEle:Integer;iGroup:Integer;nData:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_SetItemUserData (hEle:Integer;iGroup:Integer;iItem:Integer;nData:Integer);stdcall;far; external 'xcgui.dll';
function XListView_GetGroupUserData (hEle:Integer;iGroup:Integer) : Integer;stdcall;far; external 'xcgui.dll';
function XListView_GetItemUserData (hEle:Integer;iGroup:Integer;iItem:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_AddItemBkBorder (hEle:Integer;nState:Integer;color:Integer;alpha:Byte;width:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_AddItemBkFill (hEle:Integer;nState:Integer;color:Integer;alpha:Byte);stdcall;far; external 'xcgui.dll';
procedure XListView_AddItemBkImage (hEle:Integer;nState:Integer;hImage:Integer);stdcall;far; external 'xcgui.dll';
function XListView_GetItemBkInfoCount (hEle:Integer) : Integer;stdcall;far; external 'xcgui.dll';
procedure XListView_ClearItemBkInfo (hEle:Integer);stdcall;far; external 'xcgui.dll';
procedure XListView_RefreshData (hEle:Integer);stdcall;far; external 'xcgui.dll';
